| Bug #9897 | Views: 'Check Table' crashes MySQL, with a view and a table in the statement | ||
|---|---|---|---|
| Submitted: | 14 Apr 2005 13:19 | Modified: | 19 May 2005 3:36 |
| Reporter: | Disha | ||
| Status: | Closed | ||
| Category: | Server | Severity: | S2 (Serious) |
| Version: | 5.0.3/5.0.5 BK | OS: | Linux (Linux 9.1) |
| Assigned to: | Sergey Gluhov | Target Version: | |
[14 Apr 2005 13:19]
Disha
[14 Apr 2005 15:45]
Miguel Solorzano
The server crashes.
[6 May 2005 18:47]
Bugs System
A patch for this bug has been committed. After review, it may be pushed to the relevant source trees for release in the next version. You can access the patch from: http://lists.mysql.com/internals/24632
[7 May 2005 9:20]
Bugs System
A patch for this bug has been committed. After review, it may be pushed to the relevant source trees for release in the next version. You can access the patch from: http://lists.mysql.com/internals/24641
[7 May 2005 9:30]
Sergey Gluhov
Fixed in 5.0.6 tree
[19 May 2005 3:31]
Paul DuBois
Noted in 5.0.6 changelog.
