Fix for bug#9897: Views: 'Check Table' crashes MySQL, with a view and a table in the statement    thd->lex->derived_tables should be zero(it may be changed if we open a view)